--- a/index.html
+++ b/index.html
@@ -2,11 +2,24 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title>Welcome to Sedona</title>
   </head>
   <body>
+    <header class="main_header">
+      <nav class="site_menu">
+        <a class="header-logo">
+          <img src="img/logo.svg" alt="логотип Sedona">
+        </a>
+        <ul class="site_navigation">
+          <li><a href="information.html">Информация</a></li>
+          <li><a href="gallery.html">Фото и Видео</a></li>
+          <li><a href="map.html">Карта штата</a></li>
+          <li><a href="hotels.html">Гостиницы</a></li>
+        </ul>
+      </nav>
+    </header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+
 
   </body>
 </html>
