разметил main и footer для index.html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,96 @@
         </ul>
       </nav>
     </header>
+    <main class="container">
+      <img class="index_logo" src="img/indexLogo.svg" alt="Фото. Пейзажи Седоны">
+      <h1 class="visually-hidden">Бронирование жилья в Седоне</h1>
+      <p><b>Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</b></p>
+
+      <!-- Блок с преимуществами  -->
+
+      <section class="features">
+        <h2>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</h2>
+        <ul>
+          <li class="feture_1">
+              <h3>Настоящий городок</h3>
+              <p class="feature_number">№1</p>
+              <p class="feature_describtion">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+              <img src="img/logo_feature1" alt="Фото: настоящий городок">
+          </li>
+          <li class="feture_list_1">
+            <ul class="feture_spisok">
+              <!-- иконки фоновые, т.е. делаются в CSS -->
+              <li>
+                <h3>Жильё</h3>
+                <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+              </li>
+              <li>
+                <h3>Еда</h3>
+                <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+              </li>
+              <li>
+                <h3>Сувениры</h3>
+                <p>Не только китайского, но и местного производства!</p>
+              </li>
+            </ul>
+          </li>
+          <li class="feture_2">
+              <h3>Там есть мост дьявола</h3>
+              <p class="feature_number">№2</p>
+              <p class="feature_describtion">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+              <img src="img/logo_feature2" alt="Фото: мост дьявола">
+          </li>
+          <li class="feture_list_2">
+            <ul class="feture_spisok_2">
+              <li>
+                <h3>Небольшая площадь</h3>
+                <p class="feature_number">№3</p>
+                <p class="feature_describtion">Все достопримечательности находятся очень близко</p>
+              </li>
+              <li>
+                  <h3>Красивая дорога</h3>
+                  <p class="feature_number">№4</p>
+                  <p class="feature_describtion">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              </li>
+              <li>
+                  <h3>Мало туристов</h3>
+                  <p class="feature_number">№5</p>
+                  <p class="feature_describtion">Большинство едет в гранд каньон и толпится там</p>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+      <!-- Предложения гостиниц -->
+      <section class="hotels">
+        <h2 class="hotel_search">Поиск Гостиницы в Седона</h2>
+        <p><b>Заинтересовались?</b></p>
+        <p>Укажите предполагаемые даты поездки,<br>
+        и мы покажем вам лучшие предложения гостиниц в седоне</p>
+      <img src="img/map.svg" alt="Фото: карта с гостиницами">
+      </section>
+
+      <section class="trip_options">
+        <!-- Формы для выбора параметров поездки и бронирования жилья -->
+      </section>
+    </main>
+
+    <!-- Футер -->
+    <footer class="site_footer">
+      <p class="hashtag">#VISITSEDONA</p>
+      <ul class="footer-sociallinks">
+        <!-- Иконки фоновые => в CSS -->
+        <li><a class="social-button" href="#">Твитер</a></li>
+        <li><a class="social-button" href="#">Фейсбук</a></li>
+        <li><a class="social-button" href="#">Ютуб</a></li>
+      </ul>
+      <div class="copyright">
+        <p>Website by</p>
+        <a href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="img/htmlacademy_logo.svg" alt="HtmlAcademy">
+        </a>
+      </div>
+    </footer>
 
 
 
