--- a/index.html
+++ b/index.html
@@ -88,8 +88,10 @@
       </section>
 
       <section class="trip_options">
-        <!-- Формы для выбора параметров поездки и бронирования жилья -->
+        <h2 class="visually-hidden">Параметры поездки</h2>
+        <!-- Всплывающее окно: Формы для выбора параметров поездки и бронирования жилья -->
       </section>
+
     </main>
 
     <!-- Футер -->
