--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <p><b>Заинтересовались?</b></p>
         <p>Укажите предполагаемые даты поездки,<br>
         и мы покажем вам лучшие предложения гостиниц в седоне</p>
-        <h2 class="hotel_search">Поиск Гостиницы в Седоне</h2>
+        <a class="hotel_search" href="#">Поиск Гостиницы в Седоне</a>
       </section>
 
       <!-- Всплывающее окно: Формы для выбора параметров поездки и бронирования жилья -->
