исправил блок "Предложение гостиниц"

--- a/index.html
+++ b/index.html
@@ -93,22 +93,26 @@
       </section>
 
       <!-- Предложения гостиниц -->
-      <section class="hotels">
-        <p><b>Заинтересовались?</b></p>
-        <p>Укажите предполагаемые даты поездки,<br>
-        и мы покажем вам лучшие предложения гостиниц в седоне</p>
-        <a class="hotel_search" href="#">Поиск Гостиницы в Седоне</a>
-      </section>
 
-      <!-- Всплывающее окно: Формы для выбора параметров поездки и бронирования жилья -->
-      <section class="trip_options">
-          <h2 class="visually-hidden">Параметры поездки</h2>
+      <section class="hotels">
+        <div>
+            <p><b>Заинтересовались?</b></p>
+            <p>Укажите предполагаемые даты поездки,<br>
+            и мы покажем вам лучшие предложения гостиниц в седоне</p>
+            <a class="hotel_search" href="#">Поиск Гостиницы в Седоне</a>
+        </div>
+
+        <!-- Всплывающее окно: Формы для выбора параметров поездки и бронирования жилья -->
+        <section class="trip_options">
+            <h2 class="visually-hidden">Параметры поездки</h2>
+        </section>
       </section>
 
       <!-- КАРТА -->
       <section class="map">
           <img src="img/map.svg" alt="Фото: карта с гостиницами">
       </section>
+
     </main>
 
     <!-- Футер -->
