Исправил замечания наставника

--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@
 
       <section class="features">
         <ol>
-          <li class="feture_item">
-            <section>
+          <li class="feature-item">
+            <div class="item-text">
               <h3>Настоящий городок</h3>
-              <p class="feature_number_left">№1</p>
+              <span class="feature_number_left">№1</span>
               <p class="feature_describtion">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            </section>
+            </div>
             <div>
               <img src="img/logo_feature1" alt="Фото: настоящий городок">
             </div>
 
             <!-- Нужна ли обёртка для списка ниже или сам список может являться обёрткой? -->
-            <ul class="feture_list">
+            <ul class="feature_list">
               <!-- иконки фоновые, т.е. делаются в CSS -->
               <li>
                 <h3>Жильё</h3>
@@ -68,25 +68,25 @@
             </ul>
           </li>
 
-          <li class="feture_item">
+          <li class="feature-item">
               <h3>Там есть мост дьявола</h3>
-              <p class="feature_number_right">№2</p>
+              <span class="feature_number_right">№2</span>
               <p class="feature_describtion">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
               <img src="img/logo_feature2" alt="Фото: мост дьявола">
           </li>
-          <li class="feture_item">
+          <li class="feature-item">
               <h3>Небольшая площадь</h3>
-              <p class="feature_number">№3</p>
+              <span class="feature_number">№3</span>
               <p class="feature_describtion">Все достопримечательности находятся очень близко</p>
           </li>
-          <li class="feture_item">
+          <li class="feature-item">
               <h3>Красивая дорога</h3>
-              <p class="feature_number">№4</p>
+              <span class="feature_number">№4</span>
               <p class="feature_describtion">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
-          <li class="feture_item">
+          <li class="feature-item">
               <h3>Мало туристов</h3>
-              <p class="feature_number">№5</p>
+              <span class="feature_number">№5</span>
               <p class="feature_describtion">Большинство едет в гранд каньон и толпится там</p>
           </li>
         </ol>
@@ -99,13 +99,13 @@
             <p><b>Заинтересовались?</b></p>
             <p>Укажите предполагаемые даты поездки,<br>
             и мы покажем вам лучшие предложения гостиниц в седоне</p>
-            <a class="hotel_search" href="#">Поиск Гостиницы в Седоне</a>
         </div>
+        <a class="hotel_search" href="#">Поиск Гостиницы в Седоне</a>
 
         <!-- Всплывающее окно: Формы для выбора параметров поездки и бронирования жилья -->
-        <section class="trip_options">
+        <div class="trip_options">
             <h2 class="visually-hidden">Параметры поездки</h2>
-        </section>
+        </div>
       </section>
 
       <!-- КАРТА -->
