--- a/catalog.html
+++ b/catalog.html
@@ -51,39 +51,51 @@
 
             <ul class="hotels_list">
               <li>
-                <a><img src="img/Amara.svg" alt="фото.Amara Resort & Spa"></a>
+                <a><img src="img/Amara Resort & Spa.jpg" alt="фото.Amara Resort & Spa"></a>
                 <a href="#"><h3>Amara Resort & Spa</h3></a>
-                <span class="hotel_type">Гостиница</span>
-                <span class="hotel_prise">от 4000 Р.</span>
-                <a href="hotel.html">Подробнее</a>
-                <a href="booking.html">Забронировать</a>
+                <div>
+                  <p class="hotel_type">Гостиница</p>
+                  <a href="hotel.html">Подробнее</a>
+                </div>
+                <div>
+                  <p class="hotel_prise">от 4000 Р.</p>
+                  <a href="booking.html">Забронировать</a>
+                </div>
                 <div class="reviews">
-                  <span class="rating">Рейтинг: 8,5</span>
-                  <span class="rating_stars">*****</span>
+                  <p class="rating">Рейтинг: 8,5</p>
+                  <p class="rating_stars">*****</p>
                 </div>
               </li>
               <li>
-                <a><img src="img/Desert.svg" alt="фото.Desert Quail Inn"></a>
+                <a><img src="img/Desert Quail Inn.jpg" alt="фото.Desert Quail Inn"></a>
                 <a href="#"><h3>Desert Quail Inn</h3></a>
-                <span class="hotel_type">Мотель</span>
-                <span class="hotel_prise">от 3000 Р.</span>
-                <a href="hotel.html">Подробнее</a>
-                <a href="booking.html">Забронировать</a>
+                <div>
+                  <p class="hotel_type">Мотель</p>
+                  <a href="hotel.html">Подробнее</a>
+                </div>
+                <div>
+                  <p class="hotel_prise">от 3000 Р.</p>
+                  <a href="booking.html">Забронировать</a>
+                </div>
                 <div class="reviews">
-                  <span class="rating">Рейтинг: 8,9</span>
-                  <span class="rating_stars">***</span>
+                  <p class="rating">Рейтинг: 8,9</p>
+                  <p class="rating_stars">***</p>
                 </div>
               </li>
               <li>
-                <a><img src="img/Desert.svg" alt="фото.Villas at Poco Diablo"></a>
+                <a><img src="img/Villas at Poco Diablo.jpg" alt="фото.Villas at Poco Diablo"></a>
                 <a href="#"><h3>Villas at Poco Diablo</h3></a>
-                <span class="hotel_type">Апартаменты</span>
-                <span class="hotel_prise">от 2000 Р.</span>
-                <a href="hotel.html">Подробнее</a>
-                <a href="booking.html">Забронировать</a>
+                <div>
+                  <p class="hotel_type">Апартаменты</p>
+                  <a href="hotel.html">Подробнее</a>
+                </div>
+                <div>
+                  <p class="hotel_prise">от 2000 Р.</p>
+                  <a href="booking.html">Забронировать</a>
+                </div>
                 <div class="reviews">
-                  <span class="rating">Рейтинг: 9,2</span>
-                  <span class="rating_stars">**</span>
+                  <p class="rating">Рейтинг: 9,2</p>
+                  <p class="rating_stars">**</sp>
                 </div>
               </li>
             </ul>
