--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <div class="banner">
         <!-- Фон с горами в CSS -->
-        <img class="index_logo" src="img/indexLogo.svg" alt="Фото. Welcome to Sedona">
+        <img class="index_logo" src="img/background photo.jpg" alt="Фото. Welcome to Sedona">
       </div>
 
       <section class="intro">
@@ -47,7 +47,7 @@
               <p class="feature_describtion">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
             <div>
-              <img src="img/logo_feature1" alt="Фото: настоящий городок">
+              <img src="img/photo-feature1.jpg" alt="Фото: настоящий городок">
             </div>
 
             <!-- Нужна ли обёртка для списка ниже или сам список может являться обёрткой? -->
@@ -72,7 +72,7 @@
             <h3>Там есть мост дьявола</h3>
             <span class="feature_number_right">№2</span>
             <p class="feature_describtion">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-            <img src="img/logo_feature2" alt="Фото: мост дьявола">
+            <img src="img/photo-feature2.jpg" alt="Фото: мост дьявола">
           </li>
           <li class="feature-item">
             <h3>Небольшая площадь</h3>
@@ -110,7 +110,7 @@
 
       <!-- КАРТА -->
       <section class="map">
-        <img src="img/map.svg" alt="Фото: карта с гостиницами">
+        <img src="img/map.png" alt="Фото: карта с гостиницами">
       </section>
 
     </main>
