исправил замечания наставника

--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
       <header class="main_header">
         <nav class="site_menu">
           <a class="header-logo" href="index.html">
-            <img src="img/logo.svg" alt="логотип Sedona">
+            <img src="img/svg/logo-sedona.svg" alt="логотип City of Sedona" height="71px" width="140px">
           </a>
           <ul class="site_navigation">
             <li><a href="#">Информация</a></li>
@@ -51,7 +51,7 @@
 
             <ul class="hotels_list">
               <li>
-                <a><img src="img/Amara Resort & Spa.jpg" alt="фото.Amara Resort & Spa"></a>
+                <a><img src="img/AmaraResortSpa.jpg" alt="фото отеля Amara Resort & Spa" width="135" height="90"></a>
                 <a href="#"><h3>Amara Resort & Spa</h3></a>
                 <div>
                   <p class="hotel_type">Гостиница</p>
@@ -67,7 +67,7 @@
                 </div>
               </li>
               <li>
-                <a><img src="img/Desert Quail Inn.jpg" alt="фото.Desert Quail Inn"></a>
+                <a><img src="img/DesertQuailInn.jpg" alt="фото отеля Desert Quail Inn" width="135" height="90"></a>
                 <a href="#"><h3>Desert Quail Inn</h3></a>
                 <div>
                   <p class="hotel_type">Мотель</p>
@@ -83,7 +83,7 @@
                 </div>
               </li>
               <li>
-                <a><img src="img/Villas at Poco Diablo.jpg" alt="фото.Villas at Poco Diablo"></a>
+                <a><img src="img/VillasatPocoDiablo.jpg" alt="фото отеля Villas at Poco Diablo" width="135" height="90"></a>
                 <a href="#"><h3>Villas at Poco Diablo</h3></a>
                 <div>
                   <p class="hotel_type">Апартаменты</p>
@@ -114,7 +114,7 @@
         <div class="copyright">
           <p>Website by</p>
           <a href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="img/htmlacademy_logo.svg" alt="HtmlAcademy">
+            <img src="img/svg/logo-htmlacademy.svg" alt="logo: HtmlAcademy" width="115" height="41">
           </a>
         </div>
       </footer>
