--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="main_header">
       <nav class="site_menu">
         <a class="header-logo">
-          <img src="img/logo.svg" alt="логотип Sedona">
+          <img src="img/svg/logo-sedona.svg" alt="логотип City of Sedona" height="71px" width="140px">
         </a>
         <ul class="site_navigation">
           <li><a href="#">Информация</a></li>
@@ -28,7 +28,7 @@
 
       <div class="banner">
         <!-- Фон с горами в CSS -->
-        <img class="index_logo" src="img/background photo.jpg" alt="Фото. Welcome to Sedona">
+        <img class="index_logo" src="img/svg/intro-welcome.svg" alt="intro-logo: Welcome to Sedona" width="459px" height="353px">
       </div>
 
       <section class="intro">
@@ -47,7 +47,7 @@
               <p class="feature_describtion">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
             <div>
-              <img src="img/photo-feature1.jpg" alt="Фото: настоящий городок">
+              <img src="img/photo-feature1.jpg" alt="Фото: настоящий городок" width="800px" height="256px">
             </div>
 
             <!-- Нужна ли обёртка для списка ниже или сам список может являться обёрткой? -->
@@ -72,7 +72,7 @@
             <h3>Там есть мост дьявола</h3>
             <span class="feature_number_right">№2</span>
             <p class="feature_describtion">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-            <img src="img/photo-feature2.jpg" alt="Фото: мост дьявола">
+            <img src="img/photo-feature2.jpg" alt="Фото: мост дьявола" width="800px" height="256px">
           </li>
           <li class="feature-item">
             <h3>Небольшая площадь</h3>
@@ -110,7 +110,7 @@
 
       <!-- КАРТА -->
       <section class="map">
-        <img src="img/map.png" alt="Фото: карта с гостиницами">
+        <img src="img/map.png" alt="Фото: карта с гостиницами" width="1200" height="593">
       </section>
 
     </main>
@@ -127,7 +127,7 @@
       <div class="copyright">
         <p>Website by</p>
         <a href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="img/htmlacademy_logo.svg" alt="HtmlAcademy">
+          <img src="img/svg/logo-htmlacademy.svg" alt="logo: HtmlAcademy" width="115" height="41">
         </a>
       </div>
     </footer>
