вставил svg логотип в разметку?

--- a/catalog.html
+++ b/catalog.html
@@ -114,7 +114,9 @@
         <div class="copyright">
           <p>Website by</p>
           <a href="https://htmlacademy.ru/intensive/htmlcss">
-            <img src="img/svg/logo-htmlacademy.svg" alt="logo: HtmlAcademy" width="115" height="41">
+            <object type="image/svg+xml" data="img/svg/logo-htmlacademy.svg" width="115" height="41">
+              <img src="img/logo_htmlacademy_small.png" width="115" height="41" alt="logo: HtmlAcademy">
+            </object>
           </a>
         </div>
       </footer>
