добавил кнопки: сортировка по возрастанию/по убыванию

--- a/catalog.html
+++ b/catalog.html
@@ -42,8 +42,8 @@
               </ul>
               <!-- показ списка от большего к меньшему или наоборот -->
               <ul class="search-result__sorting-style">
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
+                <li><button type="button" aria-label="Cортировка по возрастанию"></button></li>
+                <li><button type="button" aria-label="Сортировка по убыванию"></button></li>
               </ul>
             </div>
 
@@ -53,11 +53,11 @@
                 <a href="#"><h3>Amara Resort & Spa</h3></a>
                 <div>
                   <p class="hotels-list__hotel-type">Гостиница</p>
-                  <a href="hotel.html">Подробнее</a>
+                  <a href="#">Подробнее</a>
                 </div>
                 <div>
                   <p class="hotels-list__hotel-prise">от 4000 Р.</p>
-                  <a href="booking.html">Забронировать</a>
+                  <a href="#">Забронировать</a>
                 </div>
                 <div class="hotels-list__hotel-review">
                   <p class="rating">Рейтинг: 8,5</p>
@@ -69,11 +69,11 @@
                 <a href="#"><h3>Desert Quail Inn</h3></a>
                 <div>
                   <p class="hotels-list__hotel-type">Мотель</p>
-                  <a href="hotel.html">Подробнее</a>
+                  <a href="#">Подробнее</a>
                 </div>
                 <div>
                   <p class="hotels-list__hotel-prise">от 3000 Р.</p>
-                  <a href="booking.html">Забронировать</a>
+                  <a href="#">Забронировать</a>
                 </div>
                 <div class="hotels-list__hotel-review">
                   <p class="rating">Рейтинг: 8,9</p>
@@ -85,11 +85,11 @@
                 <a href="#"><h3>Villas at Poco Diablo</h3></a>
                 <div>
                   <p class="hotels-list__hotel-type">Апартаменты</p>
-                  <a href="hotel.html">Подробнее</a>
+                  <a href="#">Подробнее</a>
                 </div>
                 <div>
                   <p class="hotels-list__hotel-prise">от 2000 Р.</p>
-                  <a href="booking.html">Забронировать</a>
+                  <a href="#">Забронировать</a>
                 </div>
                 <div class="hotels-list__hotel-review">
                   <p class="rating">Рейтинг: 9,2</p>
@@ -113,7 +113,7 @@
           <p>Website by</p>
           <a href="https://htmlacademy.ru/intensive/htmlcss">
             <object type="image/svg+xml" data="img/svg/logo-htmlacademy.svg" width="115" height="41">
-              <img src="img/logo_htmlacademy_small.png" width="115" height="41" alt="logo: HtmlAcademy">
+              <img src="img/logo_htmlacademy_small.png" width="115" height="41" alt="логотип HtmlAcademy">
             </object>
           </a>
         </div>
