вернул ссылки для сортировки

--- a/catalog.html
+++ b/catalog.html
@@ -92,8 +92,16 @@
               </ul>
               <!-- показ списка от большего к меньшему или наоборот -->
               <ul class="search-result__sorting-style">
-                <li><button type="button" aria-label="Cортировка по возрастанию"></button></li>
-                <li><button type="button" aria-label="Сортировка по убыванию"></button></li>
+                <li>
+                  <a href="#">
+                    <span class="visualy_hidden">Cортировка по возрастанию</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <span class="visualy_hidden">Сортировка по убыванию</span>
+                  </a>
+                </li>
               </ul>
             </div>
 
