подправил описание иконок в футере

--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
       <p class="hashtag">#VISITSEDONA</p>
       <ul class="sociallinks">
         <!-- Иконки фоновые => в CSS -->
-        <li><a class="social-button" href="#">Твитер</a></li>
-        <li><a class="social-button" href="#">Фейсбук</a></li>
-        <li><a class="social-button" href="#">Ютуб</a></li>
+        <li><a class="social-button" href="#"><span class="visualy_hidden">Твитер</span></a></li>
+        <li><a class="social-button" href="#"><span class="visualy_hidden">Фейсбук</span></a></li>
+        <li><a class="social-button" href="#"><span class="visualy_hidden">Ютуб</span></a></li>
       </ul>
       <div class="copyright">
         <p>Website by</p>
