--- a/catalog.html
+++ b/catalog.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Sedona Hotels</title>
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <!-- HEADER -->
